# mcp-fashion-server

./: .gitignore  CHANGELOG.md  README.md  app.py  build_exe.bat  build_exe.ps1  clip_classifier.py  git_push.bat  image_utils.py  preview.html  rebuild_env_and_run.bat  requirements.txt  run.bat  run_live_mode.bat  run_paper_mode.bat  run_ui.bat  setup_and_run_mock.bat  test_alerts.bat  실행방법.txt
.github/workflows/: release.yml
adapters/: __init__.py  broker_kis.py  broker_mock.py  kis_auth.py  market_kis.py  market_mock.py  notifier_windows.py  storage_sqlite.py
api/: __init__.py  deps.py  main.py  schemas.py
app/: __init__.py  __main__.py  desktop.py  main.py  ui_streamlit.py
app/templates/: index.html  preview.html
app_desktop/: index.html  package.json  tsconfig.json  tsconfig.node.json
app_desktop/src/: App.tsx  styles.css
app_desktop/src-tauri/: Cargo.toml  tauri.conf.json
app_desktop/src-tauri/src/: main.rs
app_desktop/src/api/: client.ts
assets/: app.ico.b64.txt
config/: image_utils.ini  kis.keys.toml.example  prompts.json  schema.py  settings.example.toml
core/: __init__.py  entities.py  risk.py  strategy_v5.py  symbols.py
docs/: GIT_RESET.md
ports/: __init__.py  broker.py  market_data.py  notifier.py
scripts/: dev.ps1  reset_repo.ps1  reset_repo.sh  restore_icon.ps1
tests/: test_adapters.py  test_risk.py  test_strategy.py  test_wiring.py
v5_trader/: CHANGELOG.md  README.md  ROADMAP.md  __init__.py  main.py  requirements.txt  setup.sh  updater.py
v5_trader/config/: settings.json  theme.json  user.env
(+29 files in other folders)
