[package]
name = "v5-trader-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["notification-all", "fs-all"] }
tauri-plugin-notification = "2.0.0"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
